--- a/HelloWord.Rmd
+++ b/HelloWord.Rmd
@@ -2,7 +2,7 @@
 title: "HelloWord"
 author: "pvmirosh"
 date: "7/27/2021"
-output: pdf_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -10,7 +10,6 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## R Markdown
-## This is markdown file
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
